--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,6 +24,10 @@ layout: compress
 			            </a>
                     </h3>
                     <hr class="hr-line">
+                    <p>
+                        account info
+                    </p>
+                    <hr class="hr-line">
                     <h3 class="title">
                         <a href="{{ site.url }}">
                         	<p style="font-size:1rem;font-weight:300">{{ site.bio }}</p>
