main page add icon

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,6 +32,7 @@ layout: compress
                     <hr class="hr-line">
                     <p>
                         account info
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                     </p>
                     {% include social-links.html %}
                   <hr class="hr-line">
