--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,8 @@ layout: compress
                     <hr class="hr-line">
                     <p>
                         account info
-                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        <i class="fa fa-envelope" aria-hidden="true"></i> web7722@gmail.com
+                        <i class="fa fa-phone" aria-hidden="true"></i> 010-8955-7722
                     </p>
                     {% include social-links.html %}
                   <hr class="hr-line">
