font weight normal

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ layout: compress
 			            </a>
                     </h3>
                     <hr class="hr-line">
-                    <p>
+                    <p style="font-weight:normal;">
                         <i class="fa fa-envelope" aria-hidden="true"></i> web7722@gmail.com
                         <i class="fa fa-phone" aria-hidden="true"></i> 010-8955-7722
                     </p>
@@ -38,7 +38,7 @@ layout: compress
                   <hr class="hr-line">
                   <h3 class="title">
                          <a class="btn zoombtn" href="{{ site.url }}/about">
-                         About
+                            과외소개
                          </a>
                          <!--
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
@@ -46,7 +46,7 @@ layout: compress
                          </a>
                          -->
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         Projects
+                            과외내용
                          </a>
                  </h3>
             </div>
